@@ -48,6 +48,7 @@ Bugfixes:
 - BufferOverflowException for empty RTMP packets fixed (Jira APPSERVER-37)
 - flv files are no longer locked after playback (Jira APPSERVER-17)
 - SharedObjects support "getAttributes" (Jira APPSERVER-45)
+- access to streams can be limited (Jira APPSERVER-25)
 
 
 Red5 0.6rc1 (2006-10-30)
